--- a/app/src/main/res/layout/activity_products.xml
+++ b/app/src/main/res/layout/activity_products.xml
@@ -4,8 +4,10 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
+        android:background="@android:color/white"
         android:layout_height="match_parent"
         tools:context=".Controller.MainActivity">
+
 
     <TextView
             android:layout_width="wrap_content"
